[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Secuela-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Factory.tscn" type="PackedScene" id=2]
[ext_resource path="res://CreditsScreen.gd" type="Script" id=3]
[ext_resource path="res://Powerplant.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mine.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Secuela-Bold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Secuela-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://ToolboxTheme.tres" type="Theme" id=8]

[sub_resource type="DynamicFont" id=1]
size = 210
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[node name="CreditsScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Node2D" parent="."]

[node name="game_title" type="Label" parent="title"]
margin_left = 53.8174
margin_top = 52.1355
margin_right = 701.817
margin_bottom = 637.136
custom_fonts/font = SubResource( 1 )
text = "Destroy
the
Planet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="factory" parent="title" instance=ExtResource( 2 )]
position = Vector2( 144.138, 177.505 )
decorative = true

[node name="powerplant" parent="title" instance=ExtResource( 4 )]
position = Vector2( 199, 565.81 )
decorative = true

[node name="mine" parent="title" instance=ExtResource( 5 )]
position = Vector2( 143.674, 377.272 )
decorative = true

[node name="title_tween" type="Tween" parent="."]

[node name="credits" type="RichTextLabel" parent="."]
margin_left = 819.0
margin_top = 93.0
margin_right = 1213.0
margin_bottom = 558.0
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Destroy the Planet[/b]

A game by [b]elektito[/b].

This game was originally a submission to the [b]Godot Wild Jam #36[/b]. The theme of the Jam was [b]Uncontrollable Growth[/b].

This game is made using the [b]Godot[/b] game engine. Some third-party sounds and fonts used. Check out the game page for details.

Thank you for playing."
text = "Destroy the Planet

A game by elektito.

This game was originally a submission to the Godot Wild Jam #36. The theme of the Jam was Uncontrollable Growth.

This game is made using the Godot game engine. Some third-party sounds and fonts used. Check out the game page for details.

Thank you for playing."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_btn" type="Button" parent="."]
margin_left = 1034.0
margin_top = 589.949
margin_right = 1256.0
margin_bottom = 665.949
focus_mode = 0
theme = ExtResource( 8 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game_btn" type="Button" parent="."]
margin_left = 758.0
margin_top = 589.949
margin_right = 980.0
margin_bottom = 665.949
theme = ExtResource( 8 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="new_game_btn" to="." method="_on_new_game_btn_pressed"]
